--- a/css/style.css
+++ b/css/style.css
@@ -13,50 +13,20 @@ html, body {
         "header"
         "main"
         "footer";
-    width: 70vw;
-    height: 100vh;
-    text-align: center;
     margin: 0 auto;
+    text-align: center;
+
+    width: min(1024px, 95vw);  /*  RESPONSIVE - MIN;  */
+    height: 100vh;
 }
-
-    @media screen and (max-width: 1024px) {
-        .grid-container {
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: 1fr 1fr 1fr;
-            grid-template-areas: 
-                "header"
-                "main"
-                "footer";
-            width: 80vw;
-            height: 100vh;
-            text-align: center;
-            margin: 0 auto;
-        }
-        
-    }
-
-    @media screen and (max-width: 768px) {
-        .grid-container {
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: 1fr 1fr 1fr;
-            grid-template-areas: 
-                "header"
-                "main"
-                "footer";
-            width: 95vw;
-            height: 100vh;
-            text-align: center;
-            margin: 0 auto;
-        }
-    }
 
 .header {
     display: table;
     text-align: center;
-    height: 70vh;
-    margin-top: 30vh; /*    M A R G I N - T O P !!!    */
+
+    height: 70vh;  /*  RESPONSIVE - MIN;  */
+    margin-top: 30vh;  /* MARGIN-TOP !!!  &&  RESPONSIVE - MIN;  */
+
     padding: 0vh 5vh 0vh 5vh;
     background-color: hsla(0, 0%, 100%, .5);
     box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
@@ -64,44 +34,17 @@ html, body {
     border-radius: 20vh 0vh 0vh 0vh;
 }
 
-    @media screen and (max-width: 1024px) {
-        .header {
-            display: table;
-            text-align: center;
-            height: 80vh;
-            margin-top: 20vh; /*    M A R G I N - T O P !!!    */
-            padding: 0vh 5vh 0vh 5vh;
-            background-color: hsla(0, 0%, 100%, .5);
-            box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
-            border-top: 1px solid hsla(0, 0%, 30%, .8);
-            border-radius: 20vh 0vh 0vh 0vh;
-        }
-    }
-
-    @media screen and (max-width: 768px) {
-        .header {
-            display: table;
-            text-align: center;
-            height: 80vh;
-            margin-top: 20vh; /*    M A R G I N - T O P !!!    */
-            padding: 0vh 5vh 0vh 5vh;
-            background-color: hsla(0, 0%, 100%, .5);
-            box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
-            border-top: 1px solid hsla(0, 0%, 30%, .8);
-            border-radius: 20vh 0vh 0vh 0vh;
-        }
-    }
-
 /*  ========================================================  */
 /*  ==============  P R O F I L E  I M A G E  ==============  */
 .profile-image {
-    margin-top: -20vh; /*  M A R G I N - T O P  M I N U S !!! */
+    margin-top: -20vh; /* MARGIN-TOP MINUS !!!  &&  RESPONSIVE - MIN;  */
     padding: 2vh 0vh 2vh 0vh;
 }
 
 img {
-    width: 45vh;
-    height: 45vh;
+    width: clamp(240px, 30vw, 360px); /*  RESPONSIVE - CLAMP;  */
+    height: clamp(240px, 30vw, 360px);  /*  RESPONSIVE - CLAMP;  */
+
     border-radius: 50%;
     padding: 1px;
     background-color: #666;
@@ -113,149 +56,47 @@ img:hover {
     transform: scale(1.4);
     filter: grayscale(20%);
 }
-
-    @media screen and (max-width: 1024px) {
-        .profile-image {
-            margin-top: -15vh; /*  M A R G I N - T O P  M I N U S !!! */
-            padding: 2vh 0vh 2vh 0vh;
-        }
-
-        img {
-            width: 30vh;
-            height: 30vh;
-            border-radius: 50%;
-            padding: 1px;
-            background-color: #666;
-            transition: all 0.5s ease-in-out;
-            filter: grayscale(50%);
-        }
-
-        img:hover {
-            transform: scale(1.4);
-            filter: grayscale(20%);
-        }
-    }
-
-    @media screen and (max-width: 768px) {
-        .profile-image {
-            margin-top: -15vh; /*  M A R G I N - T O P  M I N U S !!! */
-            padding: 2vh 0vh 2vh 0vh;
-        }
-
-        img {
-            width: 30vh;
-            height: 30vh;
-            border-radius: 50%;
-            padding: 1px;
-            background-color: #666;
-            transition: all 0.5s ease-in-out;
-            filter: grayscale(50%);
-        }
-
-        img:hover {
-            transform: scale(1.4);
-            filter: grayscale(20%);
-        }
-    }
 /*  ===========  E N D  P R O F I L E  I M A G E  ==========  */
 /*  ========================================================  */
 
 h1 {
     font-family: '', cursive;
-    font-size: 3rem;
     font-weight: bold;
+
+    font-size: clamp(24px, 6vw, 36px);  /*  RESPONSIVE - CLAMP;  */
     letter-spacing: 0.25rem;
 }
   
 h2{
     font-family: '', cursive;
-    font-size: 2rem;
     font-weight: bold;
+
+    font-size: clamp(16px, 4vw, 24px);  /*  RESPONSIVE - CLAMP;  */
     letter-spacing: 0.25rem;
 }
   
 p {
     font-family: '', cursive;
-    font-size: 1rem;
     font-weight: bold;
+
+    font-size: clamp(12px, 3vw, 18px);  /*  RESPONSIVE - CLAMP;  */
     letter-spacing: 0.1rem;
 }
 
-    @media screen and (max-width: 1024px) {
-        h1 {
-            font-family: '', cursive;
-            font-size: 2.5rem;
-            font-weight: bold;
-            letter-spacing: 0.25rem;
-        }
-      
-        h2{
-            font-family: '', cursive;
-            font-size: 1.75rem;
-            font-weight: bold;
-            letter-spacing: 0.25rem;
-        }
-      
-        p {
-            font-family: '', cursive;
-            font-size: 1rem;
-            font-weight: bold;
-            letter-spacing: 0.1rem;
-        }
-    }
-
-    @media screen and (max-width: 768px) {
-        h1 {
-            font-family: '', cursive;
-            font-size: 2rem;
-            font-weight: bold;
-            letter-spacing: 0.25rem;
-        }
-      
-        h2{
-            font-family: '', cursive;
-            font-size: 1.5rem;
-            font-weight: bold;
-            letter-spacing: 0.25rem;
-        }
-      
-        p {
-            font-family: '', cursive;
-            font-size: 1rem;
-            font-weight: bold;
-            letter-spacing: 0.1rem;
-        }
-    }
-
 .section-headline {
     border-top: 0.2vh solid hsla(0, 100%, 0%, 0.8);
+
     padding: 2vh 0vh 2vh 0vh;
 }
 
 /*  ========================================================  */
 /*  ==========  M A I N  C O N T E N T - I T E M  ==========  */
 .main {
-    padding: 5vh 15vh 5vh 15vh;
     background-color: hsla(0, 0%, 100%, .5);
+
+    padding: 5vh 15vh 5vh 15vh;
     box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
 }
-
-    @media screen and (max-width: 1024px) {
-        .main {
-            padding: 5vh 10vh 5vh 10vh;
-            background-color: hsla(0, 0%, 100%, .5);
-            box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
-        }
-        
-    }
-
-    @media screen and (max-width: 768px) {
-        .main {
-            padding: 5vh 5vh 5vh 5vh;
-            background-color: hsla(0, 0%, 100%, .5);
-            box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
-        }
-    }
 
 .student-countainer {
     display: flex; 
@@ -275,11 +116,12 @@ p {
 
 .student-item,
 .work-item {
-    margin: 2vh 2vh 2vh 2vh;
-    padding: 2vh 2vh 2vh 2vh;
+    text-align: center;
     border: 1px solid #000000;
     border-radius: 10px;
-    text-align: center;
+
+    margin: 2vh 2vh 2vh 2vh;
+    padding: 2vh 2vh 2vh 2vh;
 }
 /*  ======  E N D  M A I N  C O N T E N T - I T E M  =======  */
 /*  ========================================================  */
@@ -287,156 +129,54 @@ p {
 a {
     font-family: '', cursive;
     text-decoration: none;
-    font-size: 1.5rem;
     font-weight: bold;
     color: rgba(198, 13, 13, 1);
+
+    font-size: clamp(16px, 4vw, 24px); /*  RESPONSIVE - CLAMP;  */
 }
     
 a:hover {
     font-family: '', cursive;
-    font-size: 1.5rem;
-    letter-spacing: 0.1rem;
     font-weight: bold;
     color: yellow;
     text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.75), -0.1rem -0.1rem #444;
     transition: all 1s ease-in-out;
+
+    font-size: clamp(16px, 4vw, 24px); /*  RESPONSIVE - CLAMP;  */
+    letter-spacing: 0.1rem;
 }
 
 a:active {
     font-family: '', cursive;
-    font-size: 1.5rem;
-    letter-spacing: 0.1rem;
     font-weight: bold;
     color: yellow;
     text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.75), -0.1rem -0.1rem #444;
+
+    font-size: clamp(16px, 4vw, 24px); /*  RESPONSIVE - CLAMP;  */
+    letter-spacing: 0.1rem;
 }
-
-    @media screen and (max-width: 1024px) {
-        a {
-            font-family: '', cursive;
-            text-decoration: none;
-            font-size: 1.125rem;
-            font-weight: bold;
-            color: rgba(198, 13, 13, 1);
-        }
-            
-        a:hover {
-            font-family: '', cursive;
-            font-size: 1.125rem;
-            letter-spacing: 0.1rem;
-            font-weight: bold;
-            color: yellow;
-            text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.75), -0.1rem -0.1rem #444;
-            transition: all 1s ease-in-out;
-        }
-        
-        a:active {
-            font-family: '', cursive;
-            font-size: 1.125rem;
-            letter-spacing: 0.1rem;
-            font-weight: bold;
-            color: yellow;
-            text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.75), -0.1rem -0.1rem #444;
-        }
-        
-    }
-
-    @media screen and (max-width: 768px) {
-        a {
-            font-family: '', cursive;
-            text-decoration: none;
-            font-size: 1.125rem;
-            font-weight: bold;
-            color: rgba(198, 13, 13, 1);
-        }
-            
-        a:hover {
-            font-family: '', cursive;
-            font-size: 1.125rem;
-            letter-spacing: 0.1rem;
-            font-weight: bold;
-            color: yellow;
-            text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.75), -0.1rem -0.1rem #444;
-            transition: all 1s ease-in-out;
-        }
-        
-        a:active {
-            font-family: '', cursive;
-            font-size: 1.125rem;
-            letter-spacing: 0.1rem;
-            font-weight: bold;
-            color: yellow;
-            text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.75), -0.1rem -0.1rem #444;
-        }
-        
-    }
 
 .footer {
     background-color: hsla(0, 0%, 100%, .5);
     box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
     border-bottom: 1px solid hsla(0, 0%, 30%, .8);
-    border-radius: 0vh 0vh 20vh 0vh;
+
     padding: 2vh 0vh 2vh 0vh;
+    border-radius: 0vh 0vh 20vh 0vh;
 }
 
 ul, 
 li {
     display: inline;
+
     letter-spacing: 0.5rem;
 }
 
 span {
     font-family: '', cursive;
-    font-size: 2rem;
     font-weight: bold;
-    letter-spacing: 0.25rem;
     color: rgba(198, 13, 13, 1);
+
+    font-size: clamp(16px, 4vw, 24px);  /*  RESPONSIVE - CLAMP;  */
+    letter-spacing: 0.25rem;
 }
-
-    @media screen and (max-width: 1024px) {
-        .footer {
-            background-color: hsla(0, 0%, 100%, .5);
-            box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
-            border-bottom: 1px solid hsla(0, 0%, 30%, .8);
-            border-radius: 0vh 0vh 20vh 0vh;
-            padding: 2vh 0vh 2vh 0vh;
-        }
-
-        ul, 
-        li {
-            display: inline;
-            letter-spacing: 0.25rem;
-        }
-
-        span {
-            font-family: '', cursive;
-            font-size: 1.5rem;
-            font-weight: bold;
-            letter-spacing: 0.25rem;
-            color: rgba(198, 13, 13, 1);
-        }
-    }
-
-    @media screen and (max-width: 768px) {
-        .footer {
-            background-color: hsla(0, 0%, 100%, .5);
-            box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
-            border-bottom: 1px solid hsla(0, 0%, 30%, .8);
-            border-radius: 0vh 0vh 20vh 0vh;
-            padding: 2vh 0vh 2vh 0vh;
-        }
-
-        ul, 
-        li {
-            display: inline;
-            letter-spacing: 0.25rem;
-        }
-
-        span {
-            font-family: '', cursive;
-            font-size: 1.5rem;
-            font-weight: bold;
-            letter-spacing: 0.25rem;
-            color: rgba(198, 13, 13, 1);
-        }
-    }
