CSS Style Harry Roberts

--- a/css/meyer-reset.css
+++ b/css/meyer-reset.css
@@ -1,5 +1,6 @@
-/* ========================================================= */
-/* ========== A SIMPLE CSS RESET FROM: ERIC MEYER ========== */
+/*  ========================================================================  *\
+        A  S I M P L E  C S S  R E S E T  F R O M  ~  E R I C  M E Y E R
+\*  ========================================================================  */
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -22,7 +23,9 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 
-/* HTML5 display-role reset for older browsers */
+/*  ========================================================================  *\
+    HTML5 display-role reset for older browsers
+\*  ========================================================================  */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -50,6 +53,3 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
-/* ========== END MAYER-RESET CODE ========================= */
-/* ==========================================================*/
