--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/*  ========================================================================  *\
+    V M J ~ S T Y L E  C S S
+\*  ========================================================================  */
+
+/*  ========================================================================  *\
+    B A C K G R O U N D ~ I M A G E
+\*  ========================================================================  */
 html, body {
     width: 100%;
     height: 100%;
@@ -5,6 +12,9 @@ html, body {
     background-size: cover;
 }
 
+/*  ========================================================================  *\
+    G R I D  C O N T A I N E R
+\*  ========================================================================  */
 .grid-container {
     display: grid;
     grid-template-columns: 1fr;
@@ -15,18 +25,18 @@ html, body {
         "footer";
     margin: 0 auto;
     text-align: center;
-
-    width: min(1024px, 95vw);  /*  RESPONSIVE - MIN;  */
+    width: min(1024px, 95vw);
     height: 100vh;
 }
 
+/*  ========================================================================  *\
+    H E A D E R ~ P R O F I L E  I M A G E
+\*  ========================================================================  */
 .header {
     display: table;
     text-align: center;
-
-    height: 70vh;  /*  RESPONSIVE - MIN;  */
-    margin-top: 30vh;  /* MARGIN-TOP !!!  &&  RESPONSIVE - MIN;  */
-
+    height: 70vh;
+    margin-top: 30vh;
     padding: 0vh 5vh 0vh 5vh;
     background-color: hsla(0, 0%, 100%, .5);
     box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
@@ -34,105 +44,122 @@ html, body {
     border-radius: 20vh 0vh 0vh 0vh;
 }
 
-/*  ========================================================  */
-/*  ==============  P R O F I L E  I M A G E  ==============  */
-.profile-image {
-    margin-top: -20vh; /* MARGIN-TOP MINUS !!!  &&  RESPONSIVE - MIN;  */
-    padding: 2vh 0vh 2vh 0vh;
-}
+    .profile-image {
+        margin-top: -20vh;
+        padding: 2vh 0vh 2vh 0vh;
+    }
 
-img {
-    width: clamp(240px, 30vw, 360px); /*  RESPONSIVE - CLAMP;  */
-    height: clamp(240px, 30vw, 360px);  /*  RESPONSIVE - CLAMP;  */
-
-    border-radius: 50%;
-    padding: 1px;
-    background-color: #666;
-    transition: all 0.5s ease-in-out;
-    filter: grayscale(50%);
-  }
+    img {
+        width: clamp(240px, 30vw, 360px);
+        height: clamp(240px, 30vw, 360px);
+        border-radius: 50%;
+        padding: 1px;
+        background-color: #666;
+        transition: all 0.5s ease-in-out;
+        filter: grayscale(50%);
+    }
   
-img:hover {
-    transform: scale(1.4);
-    filter: grayscale(20%);
-}
-/*  ===========  E N D  P R O F I L E  I M A G E  ==========  */
-/*  ========================================================  */
+    img:hover {
+        transform: scale(1.4);
+        filter: grayscale(20%);
+    }
 
+/*  ========================================================================  *\
+    M A I N ~ C O N T E N T ~ I T E M
+\*  ========================================================================  */
+.main {
+    background-color: hsla(0, 0%, 100%, .5);
+    padding: 5vh 15vh 5vh 15vh;
+    box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
+}
+
+    .student-countainer {
+        display: flex; 
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+    }
+
+    .work-countainer {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+    }
+
+    .student-item,
+    .work-item {
+        text-align: center;
+        border: 1px solid #000000;
+        border-radius: 10px;
+        margin: 2vh 2vh 2vh 2vh;
+        padding: 2vh 2vh 2vh 2vh;
+    }
+
+/*  ========================================================================  *\
+    F O O T E R
+\*  ========================================================================  */
+.footer {
+    background-color: hsla(0, 0%, 100%, .5);
+    box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
+    border-bottom: 1px solid hsla(0, 0%, 30%, .8);
+    padding: 2vh 0vh 2vh 0vh;
+    border-radius: 0vh 0vh 20vh 0vh;
+}
+
+    ul, li {
+    display: inline;
+    letter-spacing: 0.5rem;
+    }
+
+    span {
+        font-family: '', cursive;
+        font-weight: bold;
+        color: rgba(198, 13, 13, 1);
+        font-size: clamp(16px, 4vw, 24px);
+        letter-spacing: 0.25rem;
+    }
+
+/*  ========================================================================  *\
+    F O N T S  &  S E C T I O N ~ H E A D L I N E
+\*  ========================================================================  */
 h1 {
     font-family: '', cursive;
     font-weight: bold;
-
-    font-size: clamp(24px, 6vw, 36px);  /*  RESPONSIVE - CLAMP;  */
+    font-size: clamp(24px, 6vw, 36px);
     letter-spacing: 0.25rem;
 }
   
 h2{
     font-family: '', cursive;
     font-weight: bold;
-
-    font-size: clamp(16px, 4vw, 24px);  /*  RESPONSIVE - CLAMP;  */
+    font-size: clamp(16px, 4vw, 24px);
     letter-spacing: 0.25rem;
 }
   
 p {
     font-family: '', cursive;
     font-weight: bold;
-
-    font-size: clamp(12px, 3vw, 18px);  /*  RESPONSIVE - CLAMP;  */
+    font-size: clamp(12px, 3vw, 18px);
     letter-spacing: 0.1rem;
 }
 
 .section-headline {
     border-top: 0.2vh solid hsla(0, 100%, 0%, 0.8);
-
     padding: 2vh 0vh 2vh 0vh;
 }
 
-/*  ========================================================  */
-/*  ==========  M A I N  C O N T E N T - I T E M  ==========  */
-.main {
-    background-color: hsla(0, 0%, 100%, .5);
-
-    padding: 5vh 15vh 5vh 15vh;
-    box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
-}
-
-.student-countainer {
-    display: flex; 
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-}
-
-.work-countainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-}
-
-.student-item,
-.work-item {
-    text-align: center;
-    border: 1px solid #000000;
-    border-radius: 10px;
-
-    margin: 2vh 2vh 2vh 2vh;
-    padding: 2vh 2vh 2vh 2vh;
-}
-/*  ======  E N D  M A I N  C O N T E N T - I T E M  =======  */
-/*  ========================================================  */
-
+/*  ========================================================================  *\
+    A : H O V E R ~ A C T I V E 
+\*  ========================================================================  */
 a {
     font-family: '', cursive;
     text-decoration: none;
     font-weight: bold;
     color: rgba(198, 13, 13, 1);
-
-    font-size: clamp(16px, 4vw, 24px); /*  RESPONSIVE - CLAMP;  */
+    font-size: clamp(16px, 4vw, 24px);
 }
     
 a:hover {
@@ -141,8 +168,7 @@ a:hover {
     color: yellow;
     text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.75), -0.1rem -0.1rem #444;
     transition: all 1s ease-in-out;
-
-    font-size: clamp(16px, 4vw, 24px); /*  RESPONSIVE - CLAMP;  */
+    font-size: clamp(16px, 4vw, 24px);
     letter-spacing: 0.1rem;
 }
 
@@ -151,32 +177,6 @@ a:active {
     font-weight: bold;
     color: yellow;
     text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.75), -0.1rem -0.1rem #444;
-
-    font-size: clamp(16px, 4vw, 24px); /*  RESPONSIVE - CLAMP;  */
+    font-size: clamp(16px, 4vw, 24px);
     letter-spacing: 0.1rem;
-}
-
-.footer {
-    background-color: hsla(0, 0%, 100%, .5);
-    box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
-    border-bottom: 1px solid hsla(0, 0%, 30%, .8);
-
-    padding: 2vh 0vh 2vh 0vh;
-    border-radius: 0vh 0vh 20vh 0vh;
-}
-
-ul, 
-li {
-    display: inline;
-
-    letter-spacing: 0.5rem;
-}
-
-span {
-    font-family: '', cursive;
-    font-weight: bold;
-    color: rgba(198, 13, 13, 1);
-
-    font-size: clamp(16px, 4vw, 24px);  /*  RESPONSIVE - CLAMP;  */
-    letter-spacing: 0.25rem;
 }
