--- a/css/layout.css
+++ b/css/layout.css
@@ -80,29 +80,33 @@
 
 .main {
     background-color: hsla(0, 0%, 100%, .5);
-    padding: 5vh 15vh 5vh 15vh;
     box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
 }
 
-    .student-countainer {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: start;
-    }
-
+    .student-countainer,
     .work-countainer {
         display: flex;
         flex-wrap: wrap;
-        justify-content: end;
+        gap: 6vh 3vh; /* row-gap column-gap */
+    }
+
+    .student-countainer {
+        flex-direction: row-reverse;
+        margin: 5vh 5vh 2.5vh 5vh;
+    }
+
+    .work-countainer {
+        flex-direction: row;
+        margin: 2.5vh 5vh 5vh 5vh;
     }
 
         .student-item,
         .work-item {
+            background-color: hsl(148, 90%, 50%, .2);
             text-align: center;
             border: 1px solid #000000;
-            border-radius: 10px;
-            margin: 2vh 2vh 2vh 2vh;
-            padding: 2vh 2vh 2vh 2vh;
+            border-radius: 0vh 5vh 0vh 5vh;
+            padding: 2vh 5vh 2vh 5vh;
         }
 
 
@@ -121,12 +125,4 @@
     ul, li {
     display: inline;
     letter-spacing: 0.5rem;
-    }
-
-    span {
-        font-family: '', cursive;
-        font-weight: bold;
-        color: rgba(198, 13, 13, 1);
-        font-size: clamp(20px, 3vh, 25px);
-        letter-spacing: 0.25rem;
     }
