--- a/css/layout.css
+++ b/css/layout.css
@@ -114,11 +114,17 @@
 
         .student-item,
         .work-item {
-            background-color: hsl(148, 90%, 50%, .2);
+            background: url('../image/item-background.png') no-repeat center center fixed;
             text-align: center;
             border: 1px solid #000000;
             border-radius: 0vh 5vh 0vh 5vh;
             padding: 2vh 5vh 2vh 5vh;
+        }
+
+        .student-item:hover,
+        .work-item:hover {
+            box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 40px;
+            transition: all 0.5s ease-out;
         }
 
 
