--- a/css/base.css
+++ b/css/base.css
@@ -19,5 +19,5 @@ html, body {
     height: 100%;
     background: url('../image/background.jpg') no-repeat center center fixed;
     background-size: cover;
-    font-size: 100%;
+    font-size: 14px;
 }
