--- a/css/components.css
+++ b/css/components.css
@@ -50,31 +50,31 @@ p {
 
     @media (max-width: 1080px) {
         h1 {
-            font-size: 2.143rem;  /*  30px  */
+            font-size: 2.7vw;  /*  30px/10.8=2.777  (1080px/100=10.8px=1vw)  */
         }
 
         h2,
         .contact{
-            font-size: 1.429rem;  /*  20px  */
+            font-size: 1.8vw;  /*  20px/10.8=1.851  */
         }
 
         p {
-            font-size: 1rem;  /*  14px  */
+            font-size: 1.3vw;  /*  14px/10.8=1.296  */
         }
     }
 
     @media (max-width: 768px) {
         h1 {
-            font-size: 2.143rem;  /*  30px  */
+            font-size: 3.9vw;  /*  30px/7.68=3.906vw  (768px/100=7.68px=1vw)  */
         }
 
         h2,
         .contact{
-            font-size: 1.429rem;  /*  20px  */
+            font-size: 2.6vw;  /*  20px/7.68=2.604vw  */
         }
 
         p {
-            font-size: 1rem;  /*  14px  */
+            font-size: 1.8vw;  /*  14px/7.68=1.822vw  */
         }
     }
 
@@ -148,12 +148,12 @@ a {
 
     @media (max-width: 1080px) {
         a, a:hover, a:active {
-            font-size: 1.429rem;  /*  20px  */
+            font-size: 1.8vw;  /*  20px/10.8=1.851  (1080px/100=10.8px=1vw)  */
         }
     }
 
     @media (max-width: 768px) {
         a, a:hover, a:active {
-            font-size: 1.429rem;  /*  20px  */
+            font-size: 2.6vw;  /*  20px/7.68=2.604vw  (768px/100=7.68px=1vw)  */
         }
     }
