--- a/css/components.css
+++ b/css/components.css
@@ -65,16 +65,16 @@ p {
 
     @media (max-width: 768px) {
         h1 {
-            font-size: 3.9vw;  /*  30px/7.68=3.906vw  (768px/100=7.68px=1vw)  */
+            font-size: 2.6vw;  /*  20px/7.68=2.604vw  (768px/100=7.68px=1vw)  */
         }
 
         h2,
         .contact{
-            font-size: 2.6vw;  /*  20px/7.68=2.604vw  */
+            font-size: 1.8w;  /*  14px/7.68=1.822vw  */
         }
 
         p {
-            font-size: 1.8vw;  /*  14px/7.68=1.822vw  */
+            font-size: 1.3vw;  /*  10px/7.68=1.302vw  */
         }
     }
 
