CSS Responsive font size

--- a/css/components.css
+++ b/css/components.css
@@ -60,21 +60,23 @@ p {
 
         p {
             font-size: 1.3vw;  /*  14px/10.8=1.296  */
+            line-height: 1.3vw;
         }
     }
 
     @media (max-width: 768px) {
         h1 {
-            font-size: 2.6vw;  /*  20px/7.68=2.604vw  (768px/100=7.68px=1vw)  */
+            font-size: 3.9vw;  /*  30px/7.68=3.906vw  (768px/100=7.68px=1vw)  */
         }
 
         h2,
         .contact{
-            font-size: 1.8w;  /*  14px/7.68=1.822vw  */
+            font-size: 2.6vw;  /*  20px/7.68=2.604vw  */
         }
 
         p {
-            font-size: 1.3vw;  /*  10px/7.68=1.302vw  */
+            font-size: 1.8vw;  /*  14px/7.68=1.822vw  */
+            line-height: 1.8vw;
         }
     }
 
@@ -154,6 +156,6 @@ a {
 
     @media (max-width: 768px) {
         a, a:hover, a:active {
-            font-size: 1.8vw;  /*  14px/7.68=1.822vw  (768px/100=7.68px=1vw)  */
+            font-size: 2.6vw;  /*  20px/7.68=2.604vw  */
         }
     }
