--- a/css/components.css
+++ b/css/components.css
@@ -66,17 +66,17 @@ p {
 
     @media (max-width: 768px) {
         h1 {
-            font-size: 4.95vw;  /*  38px/7.68px=4.9479vw  (768px/100=7.68px=1vw)  */
+            font-size: 5.86vw;  /*  45px/7.68px=5.8593vw  (768px/100=7.68px=1vw)  */
         }
 
         h2,
         .contact{
-            font-size: 3.26vw;  /*  25px/7.68px=3.2552vw  */
+            font-size: 3.9vw;  /*  30px/7.68px=3.9062vw  */
         }
 
         p {
-            font-size: 2.28vw;  /*  17.5px/7.68px=2.2786vw  */
-            line-height: 2.28vw;
+            font-size: 2.6vw;  /*  20px/7.68px=2.6041vw  */
+            line-height: 3.25vw; /*  125%  */
         }
     }
 
@@ -156,6 +156,6 @@ a {
 
     @media (max-width: 768px) {
         a, a:hover, a:active {
-            font-size: 3.26vw;  /*  25px/7.68px=3.2552vw  */
+            font-size: 3.9vw;  /*  30px/7.68px=3.9062vw  */
         }
     }
