--- a/css/components.css
+++ b/css/components.css
@@ -23,7 +23,9 @@
 h1 {
     font-family: 'Raleway', cursive;
     font-weight: bold;
-    font-size: 2.34vw;  /*  45px/19.2px=2.3437vw  (1920px/100=19.2px=1vw)  */
+    font-size: clamp(30px, 3vw, 45px);  /*  Mobil (786px) = min.30px  ;
+                                            Tablet (1024px) = 1024px/100=10.24px=1vw >> 3vw=3*10.24px=30.72px  ;
+                                            FHD (1920px) = max.45px  */
     letter-spacing: 0.25vw;
 }
   
@@ -31,7 +33,7 @@ h2,
 .contact{
     font-family: 'Raleway', cursive;
     font-weight: bold;
-    font-size: 1.56vw;  /*  30px/19.2px=1.5625vw  */
+    font-size: clamp(20px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
     letter-spacing: 0.25vw;
 }
 
@@ -43,42 +45,10 @@ h2,
 p {
     font-family: 'Raleway', cursive;
     font-weight: bold;
-    font-size: 1vw;  /*  20px/19.2px=1.0416vw  */
-    line-height: 1.5vw;  /*  150%  */
+    font-size: clamp(14px, 1vw, 20vw);  /*  Mobil , Tablet , FHD  */
+    line-height: clamp(21px, 1.5vw, 30vw);  /*  150%  */
     letter-spacing: 0.1vw;
 }
-
-    @media (max-width: 1024px) {
-        h1 {
-            font-size: 2.9vw;  /*  30px/10.24px=2.929vw  (1024px/100=10.24px=1vw)  */
-        }
-
-        h2,
-        .contact{
-            font-size: 1.95vw;  /*  20px/10.24px=1.953vw  */
-        }
-
-        p {
-            font-size: 1.36vw;  /*  14px/10.24px=1.367vw  */
-            line-height: 1.36vw;
-        }
-    }
-
-    @media (max-width: 768px) {
-        h1 {
-            font-size: 5.86vw;  /*  45px/7.68px=5.8593vw  (768px/100=7.68px=1vw)  */
-        }
-
-        h2,
-        .contact{
-            font-size: 3.9vw;  /*  30px/7.68px=3.9062vw  */
-        }
-
-        p {
-            font-size: 2.6vw;  /*  20px/7.68px=2.6041vw  */
-            line-height: 3.9vw; /*  150%  */
-        }
-    }
 
 
 /*  ========================================================================  *\
@@ -125,7 +95,7 @@ a {
     font-weight: bold;
     color: rgba(255, 0, 0, .9);
     text-shadow: 0.1vw 0.1vw rgba(0, 0, 0, 0.75), -0.1vw -0.1vw #444;
-    font-size: 1.56vw;  /*  30px/19.2px=1.5625vw  */
+    font-size: clamp(20px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
 }
 
     a:hover {
@@ -134,7 +104,7 @@ a {
         color: rgba(255, 255, 0, 1);
         text-shadow: 0.1vw 0.1vw rgba(0, 0, 0, 0.75), -0.1vw -0.1vw #444;
         transition: all 0.5s ease-in-out;
-        font-size: 1.56vw;  /*  30px/19.2px=1.5625vw  */
+        font-size: clamp(20px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
         letter-spacing: 0.1vw;
     }
 
@@ -143,19 +113,7 @@ a {
         font-weight: bold;
         color: rgba(255, 255, 0, 1);
         text-shadow: 0.1vw 0.1vw rgba(0, 0, 0, 0.75), -0.1vw -0.1vw #444;
-        font-size: 1.56vw;  /*  30px/19.2px=1.5625vw  */
+        font-size: clamp(20px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
         letter-spacing: 0.1vw;
         box-shadow: hsla(0, 0%, 0%, .8) 0.5vw 0.5vw 2vw;
-    }
-
-    @media (max-width: 1024px) {
-        a, a:hover, a:active {
-            font-size: 1.95vw;  /*  20px/10.24px=1.953vw  (1024px/100=10.24px=1vw)  */
-        }
-    }
-
-    @media (max-width: 768px) {
-        a, a:hover, a:active {
-            font-size: 3.9vw;  /*  30px/7.68px=3.9062vw  */
-        }
     }
