--- a/css/layout.css
+++ b/css/layout.css
@@ -117,8 +117,8 @@
             background: url('../image/item-background.png') no-repeat center center fixed;
             text-align: center;
             border: 1px solid #000000;
-            border-radius: 0vh 5vh 0vh 5vh;
-            padding: 2vh 5vh 2vh 5vh;
+            border-radius: 0vw 5vw 0vw 5vw;
+            padding: 2vw 5vw 2vw 5vw;
         }
 
         .student-item:hover,
