--- a/css/layout.css
+++ b/css/layout.css
@@ -99,17 +99,17 @@
     .work-countainer {
         display: flex;
         flex-wrap: wrap;
-        gap: 6vh 3vh; /* row-gap column-gap */
+        gap: 6vw 3vw; /* row-gap column-gap */
     }
 
     .student-countainer {
         flex-direction: row-reverse;
-        margin: 5vh 5vh 2.5vh 5vh;
+        margin: 5vw 5vw 2.5vw 5vw;
     }
 
     .work-countainer {
         flex-direction: row;
-        margin: 2.5vh 5vh 5vh 5vh;
+        margin: 2.5vw 5vw 5vw 5vw;
     }
 
         .student-item,
