--- a/css/layout.css
+++ b/css/layout.css
@@ -99,17 +99,17 @@
     .work-countainer {
         display: flex;
         flex-wrap: wrap;
-        gap: 6vw 3vw; /* row-gap column-gap */
+        gap: 4vh 2vh; /* row-gap column-gap */
     }
 
     .student-countainer {
         flex-direction: row-reverse;
-        margin: 5vw 5vw 2.5vw 5vw;
+        margin: 5vh 5vh 2.5vh 5vh;
     }
 
     .work-countainer {
         flex-direction: row;
-        margin: 2.5vw 5vw 5vw 5vw;
+        margin: 2.5vh 5vh 5vh 5vh;
     }
 
         .student-item,
@@ -117,8 +117,8 @@
             background: url('../image/item-background.png') no-repeat center center fixed;
             text-align: center;
             border: 1px solid #000000;
-            border-radius: 0vw 5vw 0vw 5vw;
-            padding: 2vw 5vw 2vw 5vw;
+            border-radius: 0vh 5vh 0vh 5vh;
+            padding: 1vh 2.5vh 1vh 2.5vh;
         }
 
         .student-item:hover,
