--- a/css/components.css
+++ b/css/components.css
@@ -33,7 +33,7 @@ h2,
 .contact{
     font-family: 'Raleway', cursive;
     font-weight: bold;
-    font-size: clamp(20px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
+    font-size: clamp(18px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
     letter-spacing: 0.25vw;
 }
 
@@ -46,7 +46,7 @@ p {
     font-family: 'Raleway', cursive;
     font-weight: bold;
     font-size: clamp(14px, 1vw, 20vw);  /*  Mobil , Tablet , FHD  */
-    line-height: clamp(21px, 1.5vw, 30vw);  /*  150%  */
+    line-height: clamp(18px, 1.25vw, 25px);  /*  125%  */
     letter-spacing: 0.1vw;
 }
 
@@ -70,7 +70,7 @@ img {
         filter: grayscale(20%);
     }
 
-    @media (max-width: 1080) {
+    @media (max-width: 1025) {
         img {
             width: 30vh;
             height: 30vh;
@@ -79,8 +79,8 @@ img {
 
     @media (max-width: 768px) {
         img {
-            width: 30vh;
-            height: 30vh;
+            width: 25vh;
+            height: 25vh;
         }
     }
 
@@ -95,7 +95,7 @@ a {
     font-weight: bold;
     color: rgba(255, 0, 0, .9);
     text-shadow: 0.1vw 0.1vw rgba(0, 0, 0, 0.75), -0.1vw -0.1vw #444;
-    font-size: clamp(20px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
+    font-size: clamp(18px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
 }
 
     a:hover {
@@ -104,7 +104,7 @@ a {
         color: rgba(255, 255, 0, 1);
         text-shadow: 0.1vw 0.1vw rgba(0, 0, 0, 0.75), -0.1vw -0.1vw #444;
         transition: all 0.5s ease-in-out;
-        font-size: clamp(20px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
+        font-size: clamp(18px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
         letter-spacing: 0.1vw;
     }
 
@@ -113,7 +113,7 @@ a {
         font-weight: bold;
         color: rgba(255, 255, 0, 1);
         text-shadow: 0.1vw 0.1vw rgba(0, 0, 0, 0.75), -0.1vw -0.1vw #444;
-        font-size: clamp(20px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
+        font-size: clamp(18px, 2vw, 30px);  /*  Mobil , Tablet , FHD  */
         letter-spacing: 0.1vw;
         box-shadow: hsla(0, 0%, 0%, .8) 0.5vw 0.5vw 2vw;
     }
